<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragmenets.LoginFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/costraintBg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_h1"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:layout_marginBottom="50dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_email"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/loginEmailEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittextbg"
                android:hint="@string/hint_email"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/edt_hint"
                android:textSize="18sp"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_pass"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/loginPassEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittextbg"
                android:hint="@string/hint_pass"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/edt_hint"
                android:textSize="18sp" />



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_btn_txt"
                android:layout_marginTop="30dp"
                android:background="@drawable/edittextbg"
                android:backgroundTint="@color/btn_color"
                android:textColor="@color/white"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/forgotPasswordTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/forgot_password_txt"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#BDBDBD"
                android:layout_margin="25dp"/>

            <TextView
                android:id="@+id/registerNowTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/no_account_signup"
                android:layout_gravity="center" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>